--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>	Your page title goes here </title> 
-	<meta http-equiv="content-type" 
+	<title>	Your page title goes here </title>
+	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
-<body> 
+<body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-	<p> your content here</p>
+<h1> wassup world </h1>
+  <p> your content here</p>
+  <img src="img/me.png" alt="chloe thornberry"/>
+  <a href="https://github.com/J4502-ss20/chloe">link to github</a>
 </body>
 
 </html>
