--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-<h1> wassup world </h1>
+<h1> Chloe Thornberry </h1>
+
+<p> cltnqb@mail.missouri.edu
+  
   <p> How does NASA organize a party?</p>
   <p> They planet.</p>
 
