new index created
start of project

--- a/OLD index.html
+++ b/OLD index.html
@@ -11,16 +11,22 @@
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-<h1> wassup world </h1>
-  <p> your content here</p>
-  <img src="img/me.png" width="300px" alt="chloe thornberry"/></p>
+<h1> Chloe Thornberry </h1>
+
+<p> cltnqb@mail.missouri.edu </p>
+
+  <p> How does NASA organize a party?</p>
+  <p> They planet.</p>
+
+<p>
+    <a href="mailto:cltnqb@mail.missouri.edu">
+    <img src="img/me.png" width="300px" alt="chloe thornberry"/> </a></p>
 <a href="https://github.com/J4502-ss20/chloe">link to github</a>
 
 <ul>
-  <li> <a href="https://www.apple.com" target="_blank"> A link to apple </a <li>
-  <li> <a href="https://www.google.com" target="_blank"> A link to google </a <li>
-  <li> what's up </li>
-  <li> hello </li>
+  <li><a href="https://www.nasa.gov" target="_blank"> A link to NASA </a> </li>
+  <li><a href="https://www.apple.com" target="_blank"> A link to apple </a> </li>
+  <li><a href="https://www.chloethornberry.com" target="_blank"> A link to my website </a> </li>
   <li><a href="xhtml_template.html">A link to a page in my site</a></li>
 </ul>
 
