--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <ul>
   <li><a href="https://www.nasa.gov" target="_blank"> A link to NASA </a> </li>
+  <li><a href="https://j4502-ss20.github.io/chloe/" target="_blank"> A link to Assignment #2 </a> </li>
   <li><a href="https://www.apple.com" target="_blank"> A link to apple </a> </li>
   <li><a href="https://www.chloethornberry.com" target="_blank"> A link to my website </a> </li>
   <li><a href="xhtml_template.html">A link to a page in my site</a></li>
