--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <a href="https://github.com/J4502-ss20/chloe">link to github</a>
 
 <ul>
+  <li><a href="oldindex.html" target="_blank"> A link to assignment #2 </a> </li>
   <li><a href="https://www.nasa.gov" target="_blank"> A link to NASA </a> </li>
-  <li><a href="https://j4502-ss20.github.io/chloe/" target="_blank"> A link to Assignment #2 </a> </li>
   <li><a href="https://www.apple.com" target="_blank"> A link to apple </a> </li>
   <li><a href="https://www.chloethornberry.com" target="_blank"> A link to my website </a> </li>
   <li><a href="xhtml_template.html">A link to a page in my site</a></li>
