--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
 <head>
 	<title>	Chloe Thornberry attempts code </title>
-	<meta http-equiv="content-type"
-		content="text/html;charset=utf-8" />
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
