--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src="img/me.png" width="300px" alt="chloe thornberry"/> </a></p>
 <a href="https://github.com/J4502-ss20/chloe">link to github</a>
 
-<ul>
+<ul id="nav">
   <li><a href="oldindex.html" target="_blank"> A link to assignment #2 </a> </li>
   <li><a href="https://www.nasa.gov" target="_blank"> A link to NASA </a> </li>
   <li><a href="https://www.apple.com" target="_blank"> A link to apple </a> </li>
