--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 
 <div class="container">
-  <div class="item-1 item">About</div>
-  <div class="item-2 item">Blog</div>
-  <div class="item-3 item">Stuff</div>
-  <div class="item-4 item">Things</div>
+  <div class="item-1 item">Home</div>
+  <div class="item-2 item">Portfolio</div>
+  <div class="item-3 item">About</div>
+  <div class="item-4 item">Contact</div>
 
 </div>
+
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
