--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <head>
 	<title>	Chloe Thornberry attempts code </title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
-<div class="container">
+
+<div> class="container"
   <div class="item-1 item">Home</div>
   <div class="item-2 item">Portfolio</div>
   <div class="item-3 item">About</div>
@@ -19,7 +20,42 @@
 </div>
 
 
+
 <body>
+  <h1>Things That Make Me Happy</h1>
+  <div class="example">
+  <ul class="cards">
+          <li>
+              <h2>Traveling</h2>
+               <p> <img src="img/bp.jpeg" width="200px" alt="pic"/> </p>
+          </li>
+          <li>
+              <h2>Friends and Family</h2>
+             <p> <img src="img/fam.JPG" width="200px"alt="pic"/></p>
+          </li>
+
+           <li>
+              <h2>Food and Drink</h2>
+              <p> <img src="img/food.png" width="200px"alt="pic"/> </p>
+          </li>
+          <li>
+              <h2>Art</h2>
+              <p> <img src="img/Art.jpeg" width="200px"alt="pic"/></p>
+          </li>
+          <li>
+              <h2>Puppies</h2>
+              <p> <img src="img/dog.jpeg" width="200px"alt="pic"/></p>
+          </li>
+          <li>
+              <h2>Theatre</h2>
+              <p> <img src="img/theatre.png" width="200px"alt="pic"/></p>
+          </li>
+
+      </ul>
+    </div>
+    <!-- Close example div -->
+</body>
+
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <h1> Chloe Thornberry </h1>
 
