--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <a href="https://github.com/J4502-ss20/chloe">link to github</a>
 
 
-  <div> class="container"
+  <div class="container">
     <div class="item-1 item">Home</div>
     <div class="item-2 item">Portfolio</div>
     <div class="item-3 item">About</div>
@@ -36,10 +36,12 @@
 
 
   <h1>Things That Make Me Happy</h1>
+  <article>
   <div class="example">
   <ul class="cards">
           <li>
               <h2>Traveling</h2>
+
                <p> <img src="img/bp.jpeg" width="200px" alt="pic"/> </p>
           </li>
           <li>
@@ -53,7 +55,7 @@
           </li>
           <li>
               <h2>Art</h2>
-              <p> <img src="img/Art.jpeg" width="200px"alt="pic"/></p>
+              <p> <img src="img/Art.jpeg" width="200px"alt="art"/></p>
           </li>
           <li>
               <h2>Puppies</h2>
@@ -66,6 +68,7 @@
 
       </ul>
     </div>
+    </article>
     <!-- Close example div -->
 </body>
 
