--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 
 
   <div class="container">
+    <nav>
+      <a class="menu-trigger" href="#">&#9776;</a>
     <div class="item-1 item">Home</div>
     <div class="item-2 item">Portfolio</div>
     <div class="item-3 item">About</div>
     <div class="item-4 item">Contact</div>
 
+</nav>
   </div>
 
 
