--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="style.css"/>
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="finished.js" type="text/javascript"></script>
 </head>
 
 
@@ -29,11 +31,12 @@
   <div class="container">
     <nav>
       <a class="menu-trigger" href="#">&#9776;</a>
-    <div class="item-1 item">Home</div>
-    <div class="item-2 item">Portfolio</div>
-    <div class="item-3 item">About</div>
-    <div class="item-4 item">Contact</div>
-
+      <ul>
+    <li class="item-1 item">Home</li>
+    <li class="item-2 item">Portfolio</li>
+    <li class="item-3 item">About</li>
+    <li class="item-4 item">Contact</li>
+  </ul>
 </nav>
   </div>
 
